Bug 1150867 - Get rid of the browser-aero.css override. r=gijs
UltraBlame original commit: e09897c3304b353392ec178f541155e8a5fa71b1

--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -1271,9 +1271,6 @@ visibility
 linear
 ;
 }
-%
-ifdef
-WINDOWS_AERO
 media
 not
 all
@@ -1300,8 +1297,6 @@ default
 theme
 )
 {
-%
-endif
 #
 main
 -
@@ -1460,15 +1455,7 @@ color
 inherit
 ;
 }
-%
-ifdef
-WINDOWS_AERO
 }
-%
-endif
-%
-ifdef
-WINDOWS_AERO
 media
 not
 all
@@ -1482,8 +1469,6 @@ windows
 compositor
 )
 {
-%
-endif
 #
 main
 -
@@ -1552,12 +1537,7 @@ visibility
 visible
 ;
 }
-%
-ifdef
-WINDOWS_AERO
 }
-%
-endif
 /
 *
 *
@@ -3185,9 +3165,6 @@ toolbarHighlight
 inset
 ;
 }
-%
-ifdef
-WINDOWS_AERO
 media
 not
 all
@@ -3201,8 +3178,6 @@ windows
 compositor
 )
 {
-%
-endif
 #
 TabsToolbar
 [
@@ -3229,12 +3204,7 @@ none
 important
 ;
 }
-%
-ifdef
-WINDOWS_AERO
 }
-%
-endif
 #
 personal
 -
@@ -3295,10 +3265,20 @@ moz
 dialog
 ;
 }
-%
-ifndef
-WINDOWS_AERO
 media
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
+and
 (
 -
 moz
@@ -3337,8 +3317,6 @@ top
 ;
 }
 }
-%
-endif
 /
 *
 :
@@ -3563,9 +3541,6 @@ buttons
 "
 ]
 {
-%
-ifdef
-WINDOWS_AERO
 margin
 -
 left
@@ -3574,23 +3549,65 @@ left
 ;
 /
 *
-additional
 space
+needed
 for
 Aero
 Snap
 *
 /
-%
-else
+}
+media
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
+{
+.
+titlebar
+-
+placeholder
+[
+type
+=
+"
+caption
+-
+buttons
+"
+]
+{
 margin
 -
 left
 :
 10px
 ;
-%
-endif
+/
+*
+less
+space
+needed
+on
+XP
+because
+there
+'
+s
+no
+Aero
+Snap
+*
+/
+}
 }
 /
 *
@@ -5249,9 +5266,6 @@ menupanel
 inc
 .
 css
-%
-ifndef
-WINDOWS_AERO
 media
 (
 -
@@ -5361,8 +5375,6 @@ png
 )
 }
 }
-%
-endif
 #
 main
 -
@@ -6136,10 +6148,19 @@ duration
 150ms
 ;
 }
-%
-ifdef
-WINDOWS_AERO
 media
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
 (
 -
 moz
@@ -6165,8 +6186,6 @@ windows
 win7
 )
 {
-%
-endif
 /
 *
 <
@@ -6756,12 +6775,7 @@ duration
 150ms
 ;
 }
-%
-ifdef
-WINDOWS_AERO
 }
-%
-endif
 #
 nav
 -
@@ -7867,10 +7881,19 @@ boxshadow
 )
 ;
 }
-%
-ifdef
-WINDOWS_AERO
 media
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
 (
 -
 moz
@@ -7896,8 +7919,6 @@ windows
 win7
 )
 {
-%
-endif
 /
 *
 <
@@ -8394,12 +8415,7 @@ hsla
 )
 ;
 }
-%
-ifdef
-WINDOWS_AERO
 }
-%
-endif
 .
 findbar
 -
@@ -8681,10 +8697,19 @@ duration
 10ms
 ;
 }
-%
-ifdef
-WINDOWS_AERO
 media
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
 (
 -
 moz
@@ -8710,8 +8735,6 @@ windows
 win7
 )
 {
-%
-endif
 /
 *
 <
@@ -9062,12 +9085,7 @@ color
 4s
 ;
 }
-%
-ifdef
-WINDOWS_AERO
 }
-%
-endif
 #
 TabsToolbar
 .
@@ -10017,10 +10035,19 @@ inset
 important
 ;
 }
-%
-ifdef
-WINDOWS_AERO
 media
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
 (
 -
 moz
@@ -10046,8 +10073,6 @@ windows
 win7
 )
 {
-%
-endif
 #
 back
 -
@@ -10476,12 +10501,7 @@ transition
 none
 ;
 }
-%
-ifdef
-WINDOWS_AERO
 }
-%
-endif
 #
 back
 -
@@ -11333,10 +11353,19 @@ solid
 ThreeDShadow
 ;
 }
-%
-ifdef
-WINDOWS_AERO
 media
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
 (
 -
 moz
@@ -11362,14 +11391,6 @@ windows
 win7
 )
 {
-%
-endif
-/
-*
-<
-Win8
-*
-/
 #
 urlbar
 .
@@ -11384,12 +11405,7 @@ radius
 2px
 ;
 }
-%
-ifdef
-WINDOWS_AERO
 }
-%
-endif
 #
 urlbar
 {
@@ -13357,10 +13373,19 @@ height
 16px
 ;
 }
-%
-ifdef
-WINDOWS_AERO
 media
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
 not
 all
 and
@@ -13375,8 +13400,6 @@ default
 theme
 )
 {
-%
-endif
 .
 ac
 -
@@ -13479,12 +13502,7 @@ inverted
 )
 ;
 }
-%
-ifdef
-WINDOWS_AERO
 }
-%
-endif
 .
 ac
 -
@@ -13602,10 +13620,20 @@ moz
 nativehyperlinktext
 ;
 }
-%
-ifndef
-WINDOWS_AERO
 media
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
+and
 (
 -
 moz
@@ -13659,8 +13687,6 @@ color
 ;
 }
 }
-%
-endif
 richlistitem
 [
 type
@@ -13738,10 +13764,19 @@ padding
 3px
 ;
 }
-%
-ifdef
-WINDOWS_AERO
 media
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
 not
 all
 and
@@ -13756,8 +13791,6 @@ default
 theme
 )
 {
-%
-endif
 richlistitem
 [
 type
@@ -13857,12 +13890,7 @@ inherit
 important
 ;
 }
-%
-ifdef
-WINDOWS_AERO
 }
-%
-endif
 .
 autocomplete
 -
@@ -15967,10 +15995,20 @@ border
 *
 /
 }
-%
-ifndef
-WINDOWS_AERO
 media
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
+and
 (
 -
 moz
@@ -16008,8 +16046,6 @@ right
 ;
 }
 }
-%
-endif
 %
 include
 .
@@ -16422,9 +16458,6 @@ png
 ;
 }
 }
-%
-ifndef
-WINDOWS_AERO
 /
 *
 Use
@@ -16611,8 +16644,6 @@ png
 ;
 }
 }
-%
-endif
 #
 TabsToolbar
 [
@@ -22309,9 +22340,20 @@ position
 relative
 ;
 }
-%
-ifndef
-WINDOWS_AERO
+media
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
+{
 #
 TabsToolbar
 >
@@ -22579,8 +22621,7 @@ top
 ;
 }
 }
-%
-endif
+}
 media
 (
 -
@@ -22851,4 +22892,29 @@ top
 -
 4px
 ;
+}
+media
+not
+all
+and
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
+{
+%
+include
+browser
+-
+aero
+.
+css
 }
