--- a/browser/themes/windows/downloads/indicator.css
+++ b/browser/themes/windows/downloads/indicator.css
@@ -1365,6 +1365,50 @@ align
 center
 ;
 }
+media
+not
+all
+and
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
+{
+#
+downloads
+-
+indicator
+-
+counter
+{
+/
+*
+Bug
+812345
+added
+this
+.
+.
+.
+*
+/
+margin
+-
+bottom
+:
+-
+1px
+;
+}
+}
 toolbar
 [
 brighttext
