--- a/browser/themes/shared/devtools/performance.inc.css
+++ b/browser/themes/shared/devtools/performance.inc.css
@@ -489,41 +489,10 @@ margin
 8px
 ;
 border
-:
-1px
-solid
-;
-border
 -
 radius
 :
 1px
-;
-background
--
-color
-:
-var
-(
--
--
-bullet
--
-bg
-)
-;
-border
--
-color
-:
-var
-(
--
--
-bullet
--
-border
-)
 ;
 }
 /
@@ -2636,11 +2605,6 @@ end
 6px
 ;
 border
-:
-1px
-solid
-;
-border
 -
 radius
 :
@@ -2681,23 +2645,18 @@ height
 :
 9px
 ;
-border
-:
-1px
-solid
-;
-border
--
-radius
-:
-1px
-;
 transform
 -
 origin
 :
 left
 center
+;
+border
+-
+radius
+:
+1px
 ;
 }
 .
@@ -2756,44 +2715,6 @@ selection
 -
 color
 )
-;
-}
-.
-waterfall
--
-marker
--
-container
-.
-selected
-.
-waterfall
--
-marker
--
-bullet
-.
-waterfall
--
-marker
--
-container
-.
-selected
-.
-waterfall
--
-marker
--
-bar
-{
-border
--
-color
-:
-initial
-!
-important
 ;
 }
 .
@@ -2885,15 +2806,254 @@ height
 8px
 ;
 border
-:
-1px
-solid
-;
-border
 -
 radius
 :
 1px
+;
+}
+#
+performance
+-
+filter
+-
+menupopup
+>
+menuitem
+.
+highlight
+-
+pink
+:
+before
+.
+marker
+-
+details
+-
+bullet
+.
+highlight
+-
+pink
+.
+waterfall
+-
+marker
+-
+bar
+.
+highlight
+-
+pink
+.
+waterfall
+-
+marker
+-
+bullet
+.
+highlight
+-
+pink
+{
+background
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+highlight
+-
+pink
+)
+;
+}
+#
+performance
+-
+filter
+-
+menupopup
+>
+menuitem
+.
+highlight
+-
+bluegrey
+:
+before
+.
+marker
+-
+details
+-
+bullet
+.
+highlight
+-
+bluegrey
+.
+waterfall
+-
+marker
+-
+bar
+.
+highlight
+-
+bluegrey
+.
+waterfall
+-
+marker
+-
+bullet
+.
+highlight
+-
+bluegrey
+{
+background
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+highlight
+-
+bluegrey
+)
+;
+}
+#
+performance
+-
+filter
+-
+menupopup
+>
+menuitem
+.
+highlight
+-
+green
+:
+before
+.
+marker
+-
+details
+-
+bullet
+.
+highlight
+-
+green
+.
+waterfall
+-
+marker
+-
+bar
+.
+highlight
+-
+green
+.
+waterfall
+-
+marker
+-
+bullet
+.
+highlight
+-
+green
+{
+background
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+highlight
+-
+green
+)
+;
+}
+#
+performance
+-
+filter
+-
+menupopup
+>
+menuitem
+.
+highlight
+-
+lightorange
+:
+before
+.
+marker
+-
+details
+-
+bullet
+.
+highlight
+-
+lightorange
+.
+waterfall
+-
+marker
+-
+bar
+.
+highlight
+-
+lightorange
+.
+waterfall
+-
+marker
+-
+bullet
+.
+highlight
+-
+lightorange
+{
+background
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+highlight
+-
+lightorange
+)
 ;
 }
 #
