Bug 1149649 - Design Polish Updates for the Reader View Footer. ui-r=mmaslaney, r=jaws
UltraBlame original commit: 70e450e46efc067541c6d3e1a20457f53560320d

--- a/toolkit/themes/windows/global/aboutReader.css
+++ b/toolkit/themes/windows/global/aboutReader.css
@@ -1209,6 +1209,18 @@ no
 -
 repeat
 ;
+color
+:
+#
+333
+;
+background
+-
+color
+:
+#
+fbfbfb
+;
 height
 :
 40px
@@ -1223,10 +1235,6 @@ toolbar
 .
 button
 {
-color
-:
-white
-;
 width
 :
 40px
@@ -1236,13 +1244,6 @@ background
 position
 :
 center
-;
-background
--
-color
-:
-#
-fbfbfb
 ;
 margin
 -
@@ -2232,12 +2233,19 @@ box
 shadow
 :
 0
-9px
-9px
+3px
+3px
 -
-9px
-#
-c1c1c1
+3px
+rgba
+(
+0
+0
+0
+0
+.
+35
+)
 inset
 ;
 }
@@ -2252,19 +2260,6 @@ color
 :
 #
 dedad4
-;
-}
-.
-dark
-.
-footer
-{
-background
--
-color
-:
-#
-777
 ;
 }
 .
