Bug 1149261 - Replace the close icon and adjust the borders. ui-r=mmaslaney, r=jaws
UltraBlame original commit: 1fbced09450fb0a083adb73162123231de6efad8

--- a/toolkit/themes/windows/global/aboutReader.css
+++ b/toolkit/themes/windows/global/aboutReader.css
@@ -1244,6 +1244,13 @@ color
 #
 fbfbfb
 ;
+margin
+-
+right
+:
+-
+1px
+;
 border
 -
 top
@@ -1260,7 +1267,10 @@ border
 -
 right
 :
-0
+1px
+solid
+#
+b5b5b5
 ;
 border
 -
@@ -2417,6 +2427,8 @@ Close
 24x24
 .
 svg
+#
+close
 "
 )
 ;
@@ -2432,12 +2444,6 @@ center
 8px
 ;
 }
-.
-close
--
-button
-:
-active
 .
 close
 -
@@ -2466,11 +2472,13 @@ RM
 -
 Close
 -
-hover
--
 24x24
 .
 svg
+#
+close
+-
+hover
 "
 )
 ;
@@ -2480,6 +2488,90 @@ color
 :
 #
 d94141
+;
+border
+-
+bottom
+:
+1px
+solid
+#
+d94141
+;
+border
+-
+right
+:
+1px
+solid
+#
+d94141
+;
+}
+.
+close
+-
+button
+:
+hover
+:
+active
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+reader
+/
+RM
+-
+Close
+-
+24x24
+.
+svg
+#
+close
+-
+hover
+"
+)
+;
+background
+-
+color
+:
+#
+AE2325
+;
+border
+-
+bottom
+:
+1px
+solid
+#
+AE2325
+;
+border
+-
+right
+:
+1px
+solid
+#
+AE2325
 ;
 }
 .
