Bug 1141931 part 1 - Compute unicode-bidi property to proper values for ruby boxes. r=heycam
UltraBlame original commit: 119d3c0fd0f60076f0a1014e9db1dc7ba63b1b9e

--- a/layout/style/ua.css
+++ b/layout/style/ua.css
@@ -599,6 +599,15 @@ display
 :
 ruby
 ;
+unicode
+-
+bidi
+:
+-
+moz
+-
+isolate
+;
 }
 *
 |
@@ -617,6 +626,15 @@ display
 ruby
 -
 base
+;
+unicode
+-
+bidi
+:
+-
+moz
+-
+isolate
 ;
 }
 *
@@ -637,6 +655,15 @@ ruby
 -
 text
 ;
+unicode
+-
+bidi
+:
+-
+moz
+-
+isolate
+;
 }
 *
 |
@@ -660,6 +687,15 @@ base
 -
 container
 ;
+unicode
+-
+bidi
+:
+-
+moz
+-
+isolate
+;
 }
 *
 |
@@ -682,6 +718,15 @@ ruby
 text
 -
 container
+;
+unicode
+-
+bidi
+:
+-
+moz
+-
+isolate
 ;
 }
 }
