Bug 1149520 - Move the font-size change to the container, so as not to repaint the toolbar.  r=jaws, r=margaret
UltraBlame original commit: 624b3ac9abf6581fc7ffc140cb501bc1e9e238be

--- a/mobile/android/themes/core/aboutReader.css
+++ b/mobile/android/themes/core/aboutReader.css
@@ -306,7 +306,7 @@ size
 :
 0
 .
-9rem
+9em
 ;
 }
 .
@@ -405,7 +405,7 @@ size
 :
 1
 .
-33rem
+33em
 ;
 font
 -
@@ -607,7 +607,11 @@ reader
 UI
 *
 /
-.
+#
+moz
+-
+reader
+-
 content
 .
 wp
@@ -615,7 +619,11 @@ wp
 caption
 -
 text
-.
+#
+moz
+-
+reader
+-
 content
 figcaption
 .
@@ -635,10 +643,14 @@ size
 :
 0
 .
-9rem
+9em
 ;
 }
-.
+#
+moz
+-
+reader
+-
 content
 {
 display
@@ -649,7 +661,7 @@ font
 -
 size
 :
-1rem
+1em
 ;
 }
 .
@@ -718,7 +730,11 @@ auto
 important
 ;
 }
-.
+#
+moz
+-
+reader
+-
 content
 p
 {
@@ -1216,10 +1232,18 @@ color
 important
 ;
 }
-.
+#
+moz
+-
+reader
+-
 content
 ul
-.
+#
+moz
+-
+reader
+-
 content
 ol
 {
