--- a/toolkit/themes/windows/global/aboutReader.css
+++ b/toolkit/themes/windows/global/aboutReader.css
@@ -396,7 +396,7 @@ size
 :
 0
 .
-9rem
+9em
 ;
 }
 /
@@ -427,7 +427,7 @@ size
 :
 0
 .
-9rem
+9em
 ;
 line
 -
@@ -435,7 +435,7 @@ height
 :
 1
 .
-33rem
+48em
 ;
 padding
 -
@@ -542,7 +542,7 @@ size
 :
 1
 .
-33rem
+33em
 ;
 line
 -
@@ -550,7 +550,7 @@ height
 :
 1
 .
-66rem
+25em
 ;
 width
 :
@@ -579,7 +579,7 @@ size
 :
 0
 .
-9rem
+9em
 ;
 line
 -
@@ -587,7 +587,7 @@ height
 :
 1
 .
-33rem
+48em
 ;
 margin
 :
@@ -612,7 +612,11 @@ italic
 Content
 *
 /
-.
+#
+moz
+-
+reader
+-
 content
 {
 display
@@ -623,7 +627,7 @@ font
 -
 size
 :
-1rem
+1em
 ;
 line
 -
@@ -631,7 +635,7 @@ height
 :
 1
 .
-6rem
+6em
 ;
 }
 .
@@ -651,7 +655,11 @@ weight
 bold
 ;
 }
-.
+#
+moz
+-
+reader
+-
 content
 h1
 {
@@ -661,7 +669,7 @@ size
 :
 1
 .
-33rem
+33em
 ;
 line
 -
@@ -669,10 +677,14 @@ height
 :
 1
 .
-66rem
+25em
 ;
 }
-.
+#
+moz
+-
+reader
+-
 content
 h2
 {
@@ -682,7 +694,7 @@ size
 :
 1
 .
-1rem
+1em
 ;
 line
 -
@@ -690,10 +702,14 @@ height
 :
 1
 .
-66rem
+51em
 ;
 }
-.
+#
+moz
+-
+reader
+-
 content
 h3
 {
@@ -701,7 +717,7 @@ font
 -
 size
 :
-1rem
+1em
 ;
 line
 -
@@ -709,7 +725,7 @@ height
 :
 1
 .
-66rem
+66em
 ;
 }
 .
@@ -874,11 +890,19 @@ right
 auto
 ;
 }
-.
+#
+moz
+-
+reader
+-
 content
 .
 caption
-.
+#
+moz
+-
+reader
+-
 content
 .
 wp
@@ -886,7 +910,11 @@ wp
 caption
 -
 text
-.
+#
+moz
+-
+reader
+-
 content
 figcaption
 {
@@ -896,7 +924,7 @@ size
 :
 0
 .
-9rem
+9em
 ;
 line
 -
@@ -904,7 +932,7 @@ height
 :
 1
 .
-33rem
+48em
 ;
 font
 -
