Bug 1152296 - Move roomStore.js from shared code to desktop specific code for Loop. r=mikedeboer
UltraBlame original commit: d6a8f02212b8a17b22d99e4f0642f3926fb7afda

--- a/browser/components/loop/test/desktop-local/index.html
+++ b/browser/components/loop/test/desktop-local/index.html
@@ -820,32 +820,6 @@ shared
 /
 js
 /
-roomStore
-.
-js
-"
->
-<
-/
-script
->
-<
-script
-src
-=
-"
-.
-.
-/
-.
-.
-/
-content
-/
-shared
-/
-js
-/
 roomStates
 .
 js
@@ -1025,6 +999,30 @@ content
 js
 /
 conversationAppStore
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+.
+.
+/
+.
+.
+/
+content
+/
+js
+/
+roomStore
 .
 js
 "
@@ -1279,6 +1277,20 @@ src
 =
 "
 l10n_test
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+roomStore_test
 .
 js
 "
