Bug 1147702 - Use a 2x Toolbar.png on Windows for basic hidpi support. r=MattN
UltraBlame original commit: 87f15ce8266d074b687a6164099c03b45770b610

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -6621,18 +6621,6 @@ end
 7px
 ;
 }
-media
-not
-all
-and
-(
-min
--
-resolution
-:
-2dppx
-)
-{
 %
 include
 .
@@ -6645,6 +6633,20 @@ toolbarbuttons
 inc
 .
 css
+media
+not
+all
+and
+(
+min
+-
+resolution
+:
+1
+.
+1dppx
+)
+{
 %
 include
 .
@@ -7032,6 +7034,17 @@ sync
 -
 button
 toolbarButtonPressed
+:
+not
+(
+[
+status
+=
+"
+active
+"
+]
+)
 {
 -
 moz
@@ -7279,7 +7292,21 @@ rect
 restore
 -
 button
-toolbarButtonPressed
+:
+hover
+:
+active
+:
+not
+(
+[
+disabled
+=
+"
+true
+"
+]
+)
 #
 fullscreen
 -
@@ -7371,10 +7398,38 @@ rect
 ;
 }
 #
+edit
+-
+controls
+[
+cui
+-
+areatype
+=
+"
+toolbar
+"
+]
+>
+#
 cut
 -
 button
-toolbarButtonPressed
+:
+hover
+:
+active
+:
+not
+(
+[
+disabled
+=
+"
+true
+"
+]
+)
 {
 -
 moz
@@ -7393,10 +7448,38 @@ rect
 ;
 }
 #
+edit
+-
+controls
+[
+cui
+-
+areatype
+=
+"
+toolbar
+"
+]
+>
+#
 copy
 -
 button
-toolbarButtonPressed
+:
+hover
+:
+active
+:
+not
+(
+[
+disabled
+=
+"
+true
+"
+]
+)
 {
 -
 moz
@@ -7415,10 +7498,38 @@ rect
 ;
 }
 #
+edit
+-
+controls
+[
+cui
+-
+areatype
+=
+"
+toolbar
+"
+]
+>
+#
 paste
 -
 button
-toolbarButtonPressed
+:
+hover
+:
+active
+:
+not
+(
+[
+disabled
+=
+"
+true
+"
+]
+)
 {
 -
 moz
@@ -7439,10 +7550,38 @@ rect
 #
 zoom
 -
+controls
+[
+cui
+-
+areatype
+=
+"
+toolbar
+"
+]
+>
+#
+zoom
+-
 out
 -
 button
-toolbarButtonPressed
+:
+hover
+:
+active
+:
+not
+(
+[
+disabled
+=
+"
+true
+"
+]
+)
 {
 -
 moz
@@ -7463,10 +7602,38 @@ rect
 #
 zoom
 -
+controls
+[
+cui
+-
+areatype
+=
+"
+toolbar
+"
+]
+>
+#
+zoom
+-
 in
 -
 button
-toolbarButtonPressed
+:
+hover
+:
+active
+:
+not
+(
+[
+disabled
+=
+"
+true
+"
+]
+)
 {
 -
 moz
@@ -7492,7 +7659,21 @@ bar
 overflow
 -
 button
-toolbarButtonPressed
+:
+hover
+:
+active
+:
+not
+(
+[
+disabled
+=
+"
+true
+"
+]
+)
 {
 -
 moz
@@ -7575,6 +7756,52 @@ rect
 684px
 36px
 666px
+)
+;
+}
+#
+panic
+-
+button
+toolbarButtonPressed
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+18px
+702px
+36px
+684px
+)
+;
+}
+#
+web
+-
+apps
+-
+button
+toolbarButtonPressed
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+18px
+720px
+36px
+702px
 )
 ;
 }
@@ -7678,187 +7905,11 @@ min
 -
 resolution
 :
-2dppx
-)
-{
-/
-*
-Whitelist
-built
--
-in
-buttons
-instead
-of
-.
-toolbarbutton
--
 1
-to
-avoid
-potentially
-breaking
-add
--
-on
-toolbar
-buttons
 .
-*
-/
-:
--
-moz
--
-any
-(
-primaryToolbarButtons
+1dppx
 )
-#
-bookmarks
--
-menu
--
-button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
->
-.
-toolbarbutton
--
-menubutton
--
-dropmarker
->
-.
-dropmarker
--
-icon
 {
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-Toolbar
-2x
-.
-png
-"
-)
-;
-}
-toolbar
-[
-brighttext
-]
-:
--
-moz
--
-any
-(
-primaryToolbarButtons
-)
-toolbar
-[
-brighttext
-]
-#
-bookmarks
--
-menu
--
-button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
->
-.
-toolbarbutton
--
-menubutton
--
-dropmarker
->
-.
-dropmarker
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-Toolbar
--
-inverted
-2x
-.
-png
-"
-)
-;
-}
-#
-back
--
-button
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-72px
-36px
-36px
-)
-;
-}
 #
 back
 -
@@ -7892,27 +7943,6 @@ rect
 72px
 72px
 36px
-)
-;
-}
-#
-forward
--
-button
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-144px
-36px
-108px
 )
 ;
 }
@@ -7956,49 +7986,7 @@ rect
 home
 -
 button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-252px
-36px
-216px
-)
-;
-}
-#
-home
--
-button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-:
-hover
-:
-active
+toolbarButtonPressed
 {
 -
 moz
@@ -8022,65 +8010,10 @@ bookmarks
 menu
 -
 button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-288px
-36px
-252px
-)
-;
-}
-#
-bookmarks
--
-menu
--
-button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
+toolbarButtonPressed
 [
 buttonover
 ]
-:
-hover
-:
-active
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
 {
 -
 moz
@@ -8104,71 +8037,13 @@ bookmarks
 menu
 -
 button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-[
-starred
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-324px
-36px
-288px
-)
-;
-}
-#
-bookmarks
--
-menu
--
-button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
+toolbarButtonPressed
 [
 starred
 ]
 [
 buttonover
 ]
-:
-hover
-:
-active
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
 {
 -
 moz
@@ -8183,50 +8058,6 @@ rect
 324px
 72px
 288px
-)
-;
-}
-#
-bookmarks
--
-menu
--
-button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
->
-.
-toolbarbutton
--
-menubutton
--
-dropmarker
->
-.
-dropmarker
--
-icon
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0px
-1260px
-36px
-1224px
 )
 ;
 }
@@ -8293,60 +8124,7 @@ rect
 history
 -
 panelmenu
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-360px
-36px
-324px
-)
-;
-}
-#
-history
--
-panelmenu
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-:
-hover
-:
-active
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
+toolbarButtonPressed
 {
 -
 moz
@@ -8368,60 +8146,7 @@ rect
 downloads
 -
 button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-396px
-36px
-360px
-)
-;
-}
-#
-downloads
--
-button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-:
-hover
-:
-active
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
+toolbarButtonPressed
 {
 -
 moz
@@ -8445,62 +8170,7 @@ add
 ons
 -
 button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-432px
-36px
-396px
-)
-;
-}
-#
-add
--
-ons
--
-button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-:
-hover
-:
-active
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
+toolbarButtonPressed
 {
 -
 moz
@@ -8524,62 +8194,7 @@ open
 file
 -
 button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-468px
-36px
-432px
-)
-;
-}
-#
-open
--
-file
--
-button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-:
-hover
-:
-active
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
+toolbarButtonPressed
 {
 -
 moz
@@ -8603,62 +8218,7 @@ save
 page
 -
 button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-504px
-36px
-468px
-)
-;
-}
-#
-save
--
-page
--
-button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-:
-hover
-:
-active
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
+toolbarButtonPressed
 {
 -
 moz
@@ -8680,57 +8240,15 @@ rect
 sync
 -
 button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-540px
-36px
-504px
-)
-;
-}
-#
-sync
--
-button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-:
-hover
-:
-active
+toolbarButtonPressed
 :
 not
 (
 [
-disabled
+status
 =
 "
-true
+active
 "
 ]
 )
@@ -8752,254 +8270,10 @@ rect
 ;
 }
 #
-sync
--
-button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-[
-status
-=
-"
-active
-"
-]
-#
-sync
--
-button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-[
-status
-=
-"
-active
-"
-]
-:
-hover
-:
-active
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-syncProgress
--
-toolbar
-2x
-.
-png
-"
-)
-;
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-36px
-36px
-0px
-)
-;
-}
-toolbar
-[
-brighttext
-]
-#
-sync
--
-button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-[
-status
-=
-"
-active
-"
-]
-toolbar
-[
-brighttext
-]
-#
-sync
--
-button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-[
-status
-=
-"
-active
-"
-]
-:
-hover
-:
-active
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-syncProgress
--
-toolbar
--
-inverted
-2x
-.
-png
-"
-)
-;
-}
-#
 feed
 -
 button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-576px
-36px
-540px
-)
-;
-}
-#
-feed
--
-button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-:
-hover
-:
-active
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
+toolbarButtonPressed
 {
 -
 moz
@@ -9023,62 +8297,7 @@ social
 share
 -
 button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-612px
-36px
-576px
-)
-;
-}
-#
-social
--
-share
--
-button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-:
-hover
-:
-active
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
+toolbarButtonPressed
 {
 -
 moz
@@ -9100,60 +8319,7 @@ rect
 characterencoding
 -
 button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-648px
-36px
-612px
-)
-;
-}
-#
-characterencoding
--
-button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-:
-hover
-:
-active
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
+toolbarButtonPressed
 {
 -
 moz
@@ -9177,62 +8343,7 @@ new
 window
 -
 button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-684px
-36px
-648px
-)
-;
-}
-#
-new
--
-window
--
-button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-:
-hover
-:
-active
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
+toolbarButtonPressed
 {
 -
 moz
@@ -9254,60 +8365,7 @@ rect
 e10s
 -
 button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-684px
-36px
-648px
-)
-;
-}
-#
-e10s
--
-button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-:
-hover
-:
-active
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
+toolbarButtonPressed
 {
 -
 moz
@@ -9348,60 +8406,7 @@ scaleY
 webide
 -
 button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-1476px
-36px
-1440px
-)
-;
-}
-#
-webide
--
-button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-:
-hover
-:
-active
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
+toolbarButtonPressed
 {
 -
 moz
@@ -9425,62 +8430,7 @@ new
 tab
 -
 button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-720px
-36px
-684px
-)
-;
-}
-#
-new
--
-tab
--
-button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-:
-hover
-:
-active
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
+toolbarButtonPressed
 {
 -
 moz
@@ -9502,60 +8452,7 @@ rect
 privatebrowsing
 -
 button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-756px
-36px
-720px
-)
-;
-}
-#
-privatebrowsing
--
-button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-:
-hover
-:
-active
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
+toolbarButtonPressed
 {
 -
 moz
@@ -9577,60 +8474,7 @@ rect
 find
 -
 button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-792px
-36px
-756px
-)
-;
-}
-#
-find
--
-button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-:
-hover
-:
-active
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
+toolbarButtonPressed
 {
 -
 moz
@@ -9652,60 +8496,7 @@ rect
 print
 -
 button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-828px
-36px
-792px
-)
-;
-}
-#
-print
--
-button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-:
-hover
-:
-active
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
+toolbarButtonPressed
 {
 -
 moz
@@ -9720,40 +8511,6 @@ rect
 828px
 72px
 792px
-)
-;
-}
-#
-restore
--
-button
-#
-fullscreen
--
-button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-864px
-36px
-828px
 )
 ;
 }
@@ -9780,30 +8537,7 @@ true
 fullscreen
 -
 button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-:
-hover
-:
-active
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
+toolbarButtonPressed
 {
 -
 moz
@@ -9862,15 +8596,7 @@ rect
 fullscreen
 -
 button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
+toolbarButtonPressed
 [
 checked
 =
@@ -9878,21 +8604,6 @@ checked
 true
 "
 ]
-:
-hover
-:
-active
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
 {
 -
 moz
@@ -9914,60 +8625,7 @@ rect
 developer
 -
 button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-900px
-36px
-864px
-)
-;
-}
-#
-developer
--
-button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-:
-hover
-:
-active
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
+toolbarButtonPressed
 {
 -
 moz
@@ -9989,60 +8647,7 @@ rect
 preferences
 -
 button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-936px
-36px
-900px
-)
-;
-}
-#
-preferences
--
-button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-:
-hover
-:
-active
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
+toolbarButtonPressed
 {
 -
 moz
@@ -10057,29 +8662,6 @@ rect
 936px
 72px
 900px
-)
-;
-}
-#
-PanelUI
--
-menu
--
-button
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-972px
-36px
-936px
 )
 ;
 }
@@ -10118,41 +8700,6 @@ rect
 972px
 72px
 936px
-)
-;
-}
-#
-edit
--
-controls
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
->
-#
-cut
--
-button
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-1008px
-36px
-972px
 )
 ;
 }
@@ -10224,41 +8771,6 @@ toolbar
 copy
 -
 button
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-1044px
-36px
-1008px
-)
-;
-}
-#
-edit
--
-controls
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
->
-#
-copy
--
-button
 :
 hover
 :
@@ -10309,41 +8821,6 @@ toolbar
 paste
 -
 button
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-1080px
-36px
-1044px
-)
-;
-}
-#
-edit
--
-controls
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
->
-#
-paste
--
-button
 :
 hover
 :
@@ -10373,43 +8850,6 @@ rect
 1080px
 72px
 1044px
-)
-;
-}
-#
-zoom
--
-controls
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
->
-#
-zoom
--
-out
--
-button
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-1116px
-36px
-1080px
 )
 ;
 }
@@ -10485,43 +8925,6 @@ zoom
 in
 -
 button
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-1152px
-36px
-1116px
-)
-;
-}
-#
-zoom
--
-controls
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
->
-#
-zoom
--
-in
--
-button
 :
 hover
 :
@@ -10562,31 +8965,6 @@ bar
 overflow
 -
 button
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-1224px
-36px
-1188px
-)
-;
-}
-#
-nav
--
-bar
--
-overflow
--
-button
 :
 hover
 :
@@ -10616,60 +8994,6 @@ rect
 1224px
 72px
 1188px
-)
-;
-}
-#
-nav
--
-bar
--
-overflow
--
-button
-:
--
-moz
--
-locale
--
-dir
-(
-rtl
-)
->
-.
-toolbarbutton
--
-icon
-{
-transform
-:
-scaleX
-(
--
-1
-)
-;
-}
-#
-tabview
--
-button
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-1296px
-36px
-1260px
 )
 ;
 }
@@ -10701,62 +9025,7 @@ email
 link
 -
 button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-1332px
-36px
-1296px
-)
-;
-}
-#
-email
--
-link
--
-button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-:
-hover
-:
-active
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
+toolbarButtonPressed
 {
 -
 moz
@@ -10778,60 +9047,7 @@ rect
 sidebar
 -
 button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-1368px
-36px
-1332px
-)
-;
-}
-#
-sidebar
--
-button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-:
-hover
-:
-active
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
+toolbarButtonPressed
 {
 -
 moz
@@ -10853,60 +9069,7 @@ rect
 panic
 -
 button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-1404px
-36px
-1368px
-)
-;
-}
-#
-panic
--
-button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-:
-hover
-:
-active
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
+toolbarButtonPressed
 {
 -
 moz
@@ -10925,129 +9088,12 @@ rect
 ;
 }
 #
-panic
--
-button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-[
-open
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-72px
-1404px
-108px
-1368px
-)
-;
-}
-#
-panic
--
-button
-:
--
-moz
--
-locale
--
-dir
-(
-rtl
-)
->
-.
-toolbarbutton
--
-icon
-{
-transform
-:
-scaleX
-(
--
-1
-)
-;
-}
-#
 web
 -
 apps
 -
 button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-1440px
-36px
-1404px
-)
-;
-}
-#
-web
--
-apps
--
-button
-[
-cui
--
-areatype
-=
-"
-toolbar
-"
-]
-:
-hover
-:
-active
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
+toolbarButtonPressed
 {
 -
 moz
@@ -11073,6 +9119,26 @@ any
 (
 primaryToolbarButtons
 )
+>
+.
+toolbarbutton
+-
+icon
+:
+-
+moz
+-
+any
+(
+primaryToolbarButtons
+)
+>
+.
+toolbarbutton
+-
+badge
+-
+container
 >
 .
 toolbarbutton
