--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -6148,6 +6148,371 @@ duration
 150ms
 ;
 }
+toolbarbutton
+[
+cui
+-
+areatype
+=
+"
+toolbar
+"
+]
+>
+:
+-
+moz
+-
+any
+(
+nestedButtons
+)
+>
+.
+toolbarbutton
+-
+icon
+:
+-
+moz
+-
+any
+(
+primaryToolbarButtons
+)
+:
+-
+moz
+-
+any
+(
+[
+cui
+-
+areatype
+=
+"
+toolbar
+"
+]
+:
+not
+(
+[
+cui
+-
+areatype
+]
+)
+)
+:
+not
+(
+:
+-
+moz
+-
+any
+(
+nestedButtons
+)
+)
+>
+.
+toolbarbutton
+-
+icon
+:
+-
+moz
+-
+any
+(
+primaryToolbarButtons
+)
+:
+-
+moz
+-
+any
+(
+[
+cui
+-
+areatype
+=
+"
+toolbar
+"
+]
+:
+not
+(
+[
+cui
+-
+areatype
+]
+)
+)
+>
+.
+toolbarbutton
+-
+badge
+-
+container
+>
+.
+toolbarbutton
+-
+icon
+:
+-
+moz
+-
+any
+(
+primaryToolbarButtons
+)
+:
+-
+moz
+-
+any
+(
+[
+cui
+-
+areatype
+=
+"
+toolbar
+"
+]
+:
+not
+(
+[
+cui
+-
+areatype
+]
+)
+)
+>
+.
+toolbarbutton
+-
+menubutton
+-
+button
+>
+.
+toolbarbutton
+-
+icon
+#
+bookmarks
+-
+menu
+-
+button
+[
+cui
+-
+areatype
+=
+"
+toolbar
+"
+]
+>
+.
+toolbarbutton
+-
+menubutton
+-
+dropmarker
+>
+.
+dropmarker
+-
+icon
+{
+width
+:
+18px
+;
+}
+#
+nav
+-
+bar
+toolbarbutton
+[
+cui
+-
+areatype
+=
+"
+toolbar
+"
+]
+>
+:
+-
+moz
+-
+any
+(
+nestedButtons
+)
+>
+.
+toolbarbutton
+-
+icon
+#
+nav
+-
+bar
+:
+-
+moz
+-
+any
+(
+primaryToolbarButtons
+)
+:
+-
+moz
+-
+any
+(
+[
+cui
+-
+areatype
+=
+"
+toolbar
+"
+]
+:
+not
+(
+[
+cui
+-
+areatype
+]
+)
+)
+>
+.
+toolbarbutton
+-
+icon
+#
+nav
+-
+bar
+:
+-
+moz
+-
+any
+(
+primaryToolbarButtons
+)
+:
+-
+moz
+-
+any
+(
+[
+cui
+-
+areatype
+=
+"
+toolbar
+"
+]
+:
+not
+(
+[
+cui
+-
+areatype
+]
+)
+)
+>
+.
+toolbarbutton
+-
+menubutton
+-
+button
+>
+.
+toolbarbutton
+-
+icon
+#
+nav
+-
+bar
+#
+bookmarks
+-
+menu
+-
+button
+[
+cui
+-
+areatype
+=
+"
+toolbar
+"
+]
+>
+.
+toolbarbutton
+-
+menubutton
+-
+dropmarker
+>
+.
+dropmarker
+-
+icon
+{
+/
+*
+horizontal
+padding
++
+border
++
+actual
+icon
+width
+*
+/
+width
+:
+32px
+;
+}
 media
 (
 -
@@ -7127,6 +7492,55 @@ transparent
 nav
 -
 bar
+#
+bookmarks
+-
+menu
+-
+button
+[
+cui
+-
+areatype
+=
+"
+toolbar
+"
+]
+>
+.
+toolbarbutton
+-
+menubutton
+-
+button
+>
+.
+toolbarbutton
+-
+icon
+{
+/
+*
+horizontal
+padding
++
+border
++
+actual
+icon
+width
+*
+/
+width
+:
+31px
+;
+}
+#
+nav
+-
+bar
 .
 toolbarbutton
 -
@@ -7145,10 +7559,16 @@ dropmarker
 icon
 {
 padding
+-
+top
 :
 8px
-5px
-7px
+;
+padding
+-
+bottom
+:
+8px
 ;
 }
 #
@@ -9468,6 +9888,24 @@ right
 !
 important
 ;
+width
+:
+31px
+!
+important
+;
+/
+*
+horizontal
+padding
++
+border
++
+actual
+icon
+width
+*
+/
 }
 conditionalForwardWithUrlbar
 :
@@ -9813,6 +10251,24 @@ none
 !
 important
 ;
+width
+:
+30px
+!
+important
+;
+/
+*
+horizontal
+padding
++
+border
++
+actual
+icon
+width
+*
+/
 box
 -
 shadow
