Bug 1132301: Part 4 - add a Share Link button in the Loop conversation window to share a room URL via the Social API. r=Standard8
UltraBlame original commit: a2075595f6fdc242347b49954a4b84d7469bd43a

--- a/browser/components/loop/standalone/content/index.html
+++ b/browser/components/loop/standalone/content/index.html
@@ -1885,6 +1885,36 @@ false
 script
 >
 <
+noscript
+>
+<
+img
+src
+=
+"
+img
+/
+logo
+.
+png
+"
+border
+=
+"
+0
+"
+alt
+=
+"
+Logo
+"
+/
+>
+<
+/
+noscript
+>
+<
 /
 body
 >
