Bug 1149230 - In-content preferences: missing padding between labels and learn more links in Advanced -> Data Choices panel. rs=Gijs
UltraBlame original commit: 45ed3255697c8975da916fa404ce8d067bd2924d

--- a/browser/themes/shared/incontentprefs/preferences.inc.css
+++ b/browser/themes/shared/incontentprefs/preferences.inc.css
@@ -1598,6 +1598,48 @@ crashReporterLearnMore
 {
 /
 *
+provide
+some
+margin
+between
+the
+links
+and
+the
+label
+text
+*
+/
+/
+*
+!
+important
+is
+needed
+to
+override
+the
+rules
+defined
+in
+common
+.
+css
+*
+/
+-
+moz
+-
+margin
+-
+start
+:
+20px
+!
+important
+;
+/
+*
 center
 the
 links
