Bug 1055181 - CSS Filter Tooltip; r=pbrosset
Adds a new devtools tooltip type in the inspector used to edit
css filters. The widget displayed in the tooltip allows to add,
edit, remove, and re-order filters.
Changes made inside the tooltip are applied to the filter
property in the rule-view.

UltraBlame original commit: 9ebe14f890e73812c4370e9948c5f2bb42dd00f4

--- a/browser/themes/shared/devtools/ruleview.css
+++ b/browser/themes/shared/devtools/ruleview.css
@@ -392,20 +392,7 @@ true
 .
 ruleview
 -
-colorswatch
-.
-ruleview
--
-rule
-[
-uneditable
-=
-true
-]
-.
-ruleview
--
-bezierswatch
+swatch
 {
 cursor
 :
@@ -758,11 +745,7 @@ start
 .
 ruleview
 -
-colorswatch
-.
-ruleview
--
-bezierswatch
+swatch
 {
 cursor
 :
@@ -958,6 +941,41 @@ bezier
 swatch
 .
 png
+"
+)
+;
+background
+-
+size
+:
+1em
+;
+}
+.
+ruleview
+-
+filterswatch
+{
+background
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+devtools
+/
+filter
+-
+swatch
+.
+svg
 "
 )
 ;
