Bug 1090949 - Add way to make WebIDE runtimes configurable. r=ochameau
UltraBlame original commit: c271c521737402876de9b0283ba2e45b52c8b465

--- a/browser/devtools/webide/themes/webide.css
+++ b/browser/devtools/webide/themes/webide.css
@@ -1249,6 +1249,14 @@ panel
 item
 :
 hover
+.
+panel
+-
+item
+-
+complex
+:
+hover
 {
 background
 :
@@ -1643,6 +1651,10 @@ panel
 item
 -
 simulator
+.
+configure
+-
+button
 {
 list
 -
@@ -1941,6 +1953,60 @@ rect
 26px
 412px
 )
+}
+.
+configure
+-
+button
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+104px
+462px
+129px
+438px
+)
+}
+.
+configure
+-
+button
+>
+.
+toolbarbutton
+-
+icon
+{
+width
+:
+13px
+;
+height
+:
+13px
+;
+}
+.
+configure
+-
+button
+>
+.
+toolbarbutton
+-
+text
+{
+display
+:
+none
+;
 }
 #
 runtime
