Bug 1090949 - Make WebIDE's Firefox OS Simulators configurable. r=ochameau
UltraBlame original commit: 3b8b0b7881a76a179d13d1476bd594127e6cdcf7

--- a/browser/devtools/webide/themes/deck.css
+++ b/browser/devtools/webide/themes/deck.css
@@ -318,3 +318,30 @@ inline
 block
 ;
 }
+input
+select
+{
+box
+-
+sizing
+:
+border
+-
+box
+;
+}
+select
+{
+padding
+-
+top
+:
+2px
+;
+padding
+-
+bottom
+:
+2px
+;
+}
