Bug 1144822 - Hide elements with common hidden class names in reader content. r=Gijs
UltraBlame original commit: ca60d6b7caf2ecec103fedf1975a81dd58799e1e

--- a/mobile/android/themes/core/aboutReader.css
+++ b/mobile/android/themes/core/aboutReader.css
@@ -1326,6 +1326,69 @@ important
 }
 /
 *
+Hide
+elements
+with
+common
+"
+hidden
+"
+class
+names
+*
+/
+#
+moz
+-
+reader
+-
+content
+.
+visually
+-
+hidden
+#
+moz
+-
+reader
+-
+content
+.
+visuallyhidden
+#
+moz
+-
+reader
+-
+content
+.
+hidden
+#
+moz
+-
+reader
+-
+content
+.
+invisible
+#
+moz
+-
+reader
+-
+content
+.
+sr
+-
+only
+{
+display
+:
+none
+;
+}
+/
+*
 =
 =
 =
