--- a/toolkit/themes/windows/global/aboutReader.css
+++ b/toolkit/themes/windows/global/aboutReader.css
@@ -1123,6 +1123,69 @@ decimal
 }
 /
 *
+Hide
+elements
+with
+common
+"
+hidden
+"
+class
+names
+*
+/
+#
+moz
+-
+reader
+-
+content
+.
+visually
+-
+hidden
+#
+moz
+-
+reader
+-
+content
+.
+visuallyhidden
+#
+moz
+-
+reader
+-
+content
+.
+hidden
+#
+moz
+-
+reader
+-
+content
+.
+invisible
+#
+moz
+-
+reader
+-
+content
+.
+sr
+-
+only
+{
+display
+:
+none
+;
+}
+/
+*
 =
 =
 =
