Bug 1038811 - Push Notifications - Firefox front end changes for preferences, and permission notification. r=MattN+bmomozilla.com
UltraBlame original commit: 1dd7cc876cd1c6497c699929ed401fce4a0c072b

--- a/browser/themes/linux/preferences/aboutPermissions.css
+++ b/browser/themes/linux/preferences/aboutPermissions.css
@@ -468,6 +468,42 @@ icon
 type
 =
 "
+push
+"
+]
+{
+list
+-
+style
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+Push
+-
+64
+.
+png
+)
+;
+}
+.
+pref
+-
+icon
+[
+type
+=
+"
 indexedDB
 "
 ]
