--- a/browser/themes/shared/notification-icons.inc.css
+++ b/browser/themes/shared/notification-icons.inc.css
@@ -134,6 +134,44 @@ icon
 popupid
 =
 "
+push
+"
+]
+{
+list
+-
+style
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+Push
+-
+64
+.
+png
+)
+;
+}
+.
+popup
+-
+notification
+-
+icon
+[
+popupid
+=
+"
 xpinstall
 -
 disabled
@@ -1135,6 +1173,37 @@ browser
 skin
 /
 Geolocation
+-
+16
+.
+png
+)
+;
+}
+#
+push
+-
+notification
+-
+icon
+{
+list
+-
+style
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+Push
 -
 16
 .
@@ -2455,6 +2524,38 @@ png
 )
 ;
 }
+#
+push
+-
+notification
+-
+icon
+{
+list
+-
+style
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+Push
+-
+16
+2x
+.
+png
+)
+;
+}
 .
 indexedDB
 -
@@ -3337,6 +3438,45 @@ browser
 skin
 /
 Geolocation
+-
+64
+2x
+.
+png
+)
+;
+}
+.
+popup
+-
+notification
+-
+icon
+[
+popupid
+=
+"
+push
+"
+]
+{
+list
+-
+style
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+Push
 -
 64
 2x
