Bug 1142525 - Hook up the tab context view to the create room action so that context can actually be added to a room. r=mikedeboer
UltraBlame original commit: 5a26c1f65709b4be852621aa50bfbe0254c8fbfd

--- a/browser/components/loop/content/css/panel.css
+++ b/browser/components/loop/content/css/panel.css
@@ -1105,9 +1105,11 @@ padding
 ;
 }
 .
-rooms
->
-div
+new
+-
+room
+-
+view
 >
 .
 context
@@ -1142,9 +1144,11 @@ padding
 ;
 }
 .
-rooms
->
-div
+new
+-
+room
+-
+view
 >
 .
 context
@@ -1167,9 +1171,11 @@ block
 ;
 }
 .
-rooms
->
-div
+new
+-
+room
+-
+view
 >
 .
 context
@@ -1192,9 +1198,11 @@ start
 ;
 }
 .
-rooms
->
-div
+new
+-
+room
+-
+view
 >
 .
 context
@@ -1241,9 +1249,11 @@ dir
 rtl
 ]
 .
-rooms
->
-div
+new
+-
+room
+-
+view
 >
 .
 context
@@ -1259,9 +1269,11 @@ left
 ;
 }
 .
-rooms
->
-div
+new
+-
+room
+-
+view
 >
 .
 context
@@ -1283,9 +1295,11 @@ none
 ;
 }
 .
-rooms
->
-div
+new
+-
+room
+-
+view
 >
 .
 context
@@ -1306,9 +1320,11 @@ color
 ;
 }
 .
-rooms
->
-div
+new
+-
+room
+-
+view
 >
 .
 context
@@ -1333,9 +1349,11 @@ both
 ;
 }
 .
-rooms
->
-div
+new
+-
+room
+-
+view
 >
 .
 btn
@@ -1391,19 +1409,23 @@ out
 *
 /
 .
-rooms
+new
+-
+room
+-
+view
 >
-div
->
-:
-not
-(
 .
 context
-)
+.
+hide
 +
 .
-btn
+new
+-
+room
+-
+button
 {
 border
 -
