Bug 1153243 - Set size for badged SDK buttons in the toolbar. r=mconley
UltraBlame original commit: abf68360159d69db73c4e08fae17cc7dc60528e6

--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -4933,46 +4933,6 @@ padding
 7px
 ;
 }
-toolbarbutton
-.
-badged
--
-button
->
-.
-toolbarbutton
--
-badge
--
-container
->
-.
-toolbarbutton
--
-icon
-toolbarbutton
-[
-type
-=
-"
-socialmark
-"
-]
->
-.
-toolbarbutton
--
-icon
-{
-max
--
-width
-:
-32px
-!
-important
-;
-}
 /
 *
 Help
@@ -5001,6 +4961,37 @@ areatype
 toolbar
 "
 ]
+>
+.
+toolbarbutton
+-
+icon
+toolbarbutton
+[
+sdk
+-
+button
+=
+"
+true
+"
+]
+[
+cui
+-
+areatype
+=
+"
+toolbar
+"
+]
+>
+.
+toolbarbutton
+-
+badge
+-
+container
 >
 .
 toolbarbutton
