--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -12366,6 +12366,37 @@ toolbar
 toolbarbutton
 -
 icon
+toolbarbutton
+[
+sdk
+-
+button
+=
+"
+true
+"
+]
+[
+cui
+-
+areatype
+=
+"
+toolbar
+"
+]
+>
+.
+toolbarbutton
+-
+badge
+-
+container
+>
+.
+toolbarbutton
+-
+icon
 {
 width
 :
