Bug 1153243 - Set size for badged SDK buttons in the panel / palette. r=gijs
UltraBlame original commit: 8fa1ddc6416534bee5064481363ee0c5331f5f94

--- a/browser/themes/shared/customizableui/panelUIOverlay.inc.css
+++ b/browser/themes/shared/customizableui/panelUIOverlay.inc.css
@@ -2561,6 +2561,37 @@ true
 toolbarbutton
 -
 icon
+toolbarpaletteitem
+[
+place
+=
+"
+palette
+"
+]
+>
+toolbarbutton
+[
+sdk
+-
+button
+=
+"
+true
+"
+]
+>
+.
+toolbarbutton
+-
+badge
+-
+container
+>
+.
+toolbarbutton
+-
+icon
 toolbarbutton
 [
 sdk
@@ -2582,6 +2613,39 @@ menu
 panel
 "
 ]
+>
+.
+toolbarbutton
+-
+icon
+toolbarbutton
+[
+sdk
+-
+button
+=
+"
+true
+"
+]
+[
+cui
+-
+areatype
+=
+"
+menu
+-
+panel
+"
+]
+>
+.
+toolbarbutton
+-
+badge
+-
+container
 >
 .
 toolbarbutton
