Bug 1150251: Added a padding to +/- buttons and decreased their margin -r=margaret.
UltraBlame original commit: 165ef2e74b134f90aaa6f751c0979918ec7865b6

--- a/mobile/android/themes/core/aboutReader.css
+++ b/mobile/android/themes/core/aboutReader.css
@@ -1946,16 +1946,14 @@ color
 000000
 ;
 margin
--
-left
 :
-40px
+0
+30px
 ;
-margin
--
-right
+padding
 :
-40px
+0
+10px
 ;
 }
 .
@@ -2031,7 +2029,12 @@ margin
 -
 left
 :
-60px
+50px
+;
+padding
+:
+0
+5px
 ;
 }
 .
@@ -2050,7 +2053,12 @@ margin
 -
 right
 :
-60px
+50px
+;
+padding
+:
+0
+5px
 ;
 }
 #
