--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -22840,6 +22840,30 @@ windows
 -
 xp
 )
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+vista
+)
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+win7
+)
 {
 #
 TabsToolbar
@@ -22879,6 +22903,103 @@ png
 )
 ;
 }
+/
+*
+We
+'
+re
+intentionally
+using
+the
+titlebar
+asset
+here
+for
+fullscreen
+mode
+.
+*
+See
+bug
+1008183
+.
+*
+/
+#
+private
+-
+browsing
+-
+indicator
+-
+titlebar
+>
+.
+private
+-
+browsing
+-
+indicator
+#
+main
+-
+window
+[
+inFullscreen
+]
+#
+TabsToolbar
+>
+.
+private
+-
+browsing
+-
+indicator
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+privatebrowsing
+-
+mask
+-
+titlebar
+-
+XPVista7
+.
+png
+"
+)
+;
+}
+}
+media
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
+{
 media
 not
 all
@@ -22940,73 +23061,6 @@ png
 height
 :
 28px
-;
-}
-/
-*
-We
-'
-re
-intentionally
-using
-the
-titlebar
-asset
-here
-for
-fullscreen
-mode
-.
-*
-See
-bug
-1008183
-.
-*
-/
-#
-main
--
-window
-[
-inFullscreen
-]
-#
-TabsToolbar
->
-.
-private
--
-browsing
--
-indicator
-{
-background
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-privatebrowsing
--
-mask
--
-titlebar
--
-XPVista7
-.
-png
-"
-)
 ;
 }
 #
@@ -23121,88 +23175,6 @@ classic
 {
 /
 *
-We
-'
-re
-intentionally
-using
-the
-titlebar
-asset
-here
-for
-fullscreen
-mode
-.
-*
-See
-bug
-1008183
-.
-*
-/
-#
-private
--
-browsing
--
-indicator
--
-titlebar
->
-.
-private
--
-browsing
--
-indicator
-#
-main
--
-window
-[
-inFullscreen
-]
-#
-TabsToolbar
->
-.
-private
--
-browsing
--
-indicator
-{
-background
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-privatebrowsing
--
-mask
--
-titlebar
--
-XPVista7
-.
-png
-"
-)
-;
-}
-/
-*
 *
 *
 We
@@ -23291,6 +23263,276 @@ top
 :
 4px
 ;
+}
+}
+media
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+vista
+)
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+win7
+)
+{
+media
+(
+-
+moz
+-
+windows
+-
+glass
+)
+{
+#
+main
+-
+window
+[
+sizemode
+=
+"
+normal
+"
+]
+>
+#
+titlebar
+>
+#
+titlebar
+-
+content
+>
+#
+titlebar
+-
+buttonbox
+-
+container
+>
+#
+private
+-
+browsing
+-
+indicator
+-
+titlebar
+>
+.
+private
+-
+browsing
+-
+indicator
+{
+top
+:
+1px
+;
+}
+#
+main
+-
+window
+[
+sizemode
+=
+"
+maximized
+"
+]
+>
+#
+titlebar
+>
+#
+titlebar
+-
+content
+>
+#
+titlebar
+-
+buttonbox
+-
+container
+>
+#
+private
+-
+browsing
+-
+indicator
+-
+titlebar
+>
+.
+private
+-
+browsing
+-
+indicator
+{
+top
+:
+-
+1px
+;
+}
+}
+/
+*
+*
+*
+This
+next
+block
+targets
+Aero
+Basic
+which
+has
+different
+positioning
+for
+the
+*
+window
+caption
+buttons
+and
+therefore
+needs
+to
+be
+special
+-
+cased
+.
+*
+/
+media
+(
+-
+moz
+-
+windows
+-
+default
+-
+theme
+)
+{
+media
+not
+all
+and
+(
+-
+moz
+-
+windows
+-
+compositor
+)
+{
+#
+main
+-
+window
+[
+sizemode
+=
+"
+normal
+"
+]
+>
+#
+titlebar
+>
+#
+titlebar
+-
+content
+>
+#
+titlebar
+-
+buttonbox
+-
+container
+>
+#
+private
+-
+browsing
+-
+indicator
+-
+titlebar
+>
+.
+private
+-
+browsing
+-
+indicator
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+privatebrowsing
+-
+mask
+-
+titlebar
+-
+XPVista7
+-
+tall
+.
+png
+"
+)
+;
+height
+:
+28px
+;
+}
+}
 }
 }
 /
