Bug 1153952 fix social button size, clarify attribute name across sdk and social, r=dao
UltraBlame original commit: cdebac12ce27874f392ce8f1cde77f975606b8ca

--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -4944,9 +4944,9 @@ fit
 /
 toolbarbutton
 [
-sdk
+constrain
 -
-button
+size
 =
 "
 true
@@ -4968,9 +4968,9 @@ toolbarbutton
 icon
 toolbarbutton
 [
-sdk
+constrain
 -
-button
+size
 =
 "
 true
@@ -5018,9 +5018,9 @@ bar
 )
 toolbarbutton
 [
-sdk
+constrain
 -
-button
+size
 =
 "
 true
