--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -12344,9 +12344,9 @@ fit
 /
 toolbarbutton
 [
-sdk
+constrain
 -
-button
+size
 =
 "
 true
@@ -12368,9 +12368,9 @@ toolbarbutton
 icon
 toolbarbutton
 [
-sdk
+constrain
 -
-button
+size
 =
 "
 true
