--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -7243,9 +7243,9 @@ fit
 /
 toolbarbutton
 [
-sdk
+constrain
 -
-button
+size
 =
 "
 true
@@ -7267,9 +7267,9 @@ toolbarbutton
 icon
 toolbarbutton
 [
-sdk
+constrain
 -
-button
+size
 =
 "
 true
@@ -7308,9 +7308,9 @@ nav
 bar
 toolbarbutton
 [
-sdk
+constrain
 -
-button
+size
 =
 "
 true
@@ -15488,41 +15488,6 @@ max
 height
 :
 16px
-;
-}
-toolbarbutton
-[
-type
-=
-"
-socialmark
-"
-]
->
-.
-toolbarbutton
--
-icon
-{
-width
-:
-auto
-;
-height
-:
-auto
-;
-max
--
-width
-:
-32px
-;
-max
--
-height
-:
-24px
 ;
 }
 /
