Bug 1141571 - Add a legend to the Box Model tool. r=bgrings
UltraBlame original commit: 0ceb71fdbe2fd730b613370ca36cd57840ec4602

--- a/browser/devtools/layoutview/view.css
+++ b/browser/devtools/layoutview/view.css
@@ -272,6 +272,51 @@ padding
 25px
 ;
 }
+.
+legend
+{
+position
+:
+absolute
+;
+margin
+:
+5px
+6px
+;
+z
+-
+index
+:
+1
+;
+}
+.
+legend
+[
+data
+-
+box
+=
+"
+margin
+"
+]
+{
+color
+:
+var
+(
+-
+-
+theme
+-
+highlight
+-
+blue
+)
+;
+}
 #
 main
 >
